<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_test_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout_radio"
        android:layout_marginBottom="200dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:text="@string/demo_text" />

    <LinearLayout
        android:id="@+id/layout_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <RadioGroup
            android:id="@+id/radio_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio_color_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                android:text="@string/radio_text_black"/>
            <RadioButton
                android:id="@+id/radio_color_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/red"
                android:text="@string/radio_text_red"/>
            <RadioButton
                android:id="@+id/radio_color_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue"
                android:text="@string/radio_text_blue"/>
            <RadioButton
                android:id="@+id/radio_color_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/green"
                android:text="@string/radio_text_green"/>
        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_radio"
        android:layout_marginTop="1dp"
        android:gravity="center">
        <CheckBox
            android:id="@+id/checkbox_style_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/checkbox_text_bold"/>
        <CheckBox
            android:id="@+id/checkbox_style_italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:text="@string/checkbox_text_italic"/>
        <CheckBox
            android:id="@+id/checkbox_style_reverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_text_under"/>
        <CheckBox
            android:id="@+id/checkbox_style_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_text_delete"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_checkbox"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bar_text_min"/>
        <SeekBar
            android:id="@+id/bar_size"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:max="40"
            android:min="10"
            android:progress="18"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bar_text_max"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_bar_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_bar"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="50dp"
        android:gravity="center">
        <TextView
            android:id="@+id/show_bar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_bar_text_default"/>
    </LinearLayout>

</RelativeLayout>